src/Hooli/wwwroot/css/site.css
/* ... */
.btn {
    border: 0 none;
}

.btn:focus, .btn:active:focus, .btn.active:focus {
    outline: 0 none;
}

.btn-primary,
.btn-danger {
    border-radius: 0;
}

.btn-primary {
    background: #fd7e23;
    color: #ffffff;
}

.btn-primary:hover, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
    background: #FF964B;
}

.btn-primary:focus {
    background: #fd7e23;    
}

.btn-hooli {
    color: #333;
}

.btn-hooli-link {
    color: #fd7e23;
    padding: 0;
    font-weight: bolder;
}

.btn-hooli-link:hover, .btn-hooli-link:focus, .btn-hooli-link:active, .btn-hooli-link.active, .open > .dropdown-toggle.btn-hooli-link {
    color: #FF964B;
}

.btn-hooli:hover, .btn-hooli:focus, .btn-hooli:active, .btn-hooli.active, .open > .dropdown-toggle.btn-hooli {
    color: #fd7e23;
    text-decoration: none;
}

.btn-option {
    background: #CCC;
    color: #333;    
}

.btn-option:focus {
    background: #CCC;
    color: #333;
}

.btn-selected {
    background: #fd7e23;
    color: #FFF;    
}

.btn-2way {
    width: 50%;
    float: left;
}

.btn-container {
    height: inherit;
}

.btn-mtop {
    margin-top: 15px;
    margin-bottom: 10px;
}

.btn-edge {
    height: 35px;
    border-left: 0;
    position: absolute;
    right: 15px;
}

.btn-trans {
    opacity: 0.95;
}

.row .btn {
    border-color: #DDD;
    border-style: solid;
    border-width: 1px;
    border-top: none;
    border-bottom: none;
    border-left: none;
}

.row .btn:last-of-type {
    border-right: none;
}

.fileinputs {
    position: relative;
    width: 100%;
}

.fakefile {
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 1;
    width: 100%;
}

.fakefile input[type=button] {
    cursor: pointer;
    width: 100%;
}

.fileinputs input.file {
    position: relative;
    text-align: right;
    -moz-opacity:0 ;
    filter:alpha(opacity: 0);
    opacity: 0;
    z-index: 2;
    width: 100%;
    cursor: pointer;
}

.col-centered {
    float: none;
    margin: 0 auto;
}

.padding-remove-sides {
    padding-left: 0;
    padding-right: 0;
}

.p-rm-s {
    padding-left: 0;
    padding-right: 0;
}


.padding-side {
    padding-left: 20px;
    padding-right: 20px;
}

.margin-top {
    margin-top: 20px;
}

.margin-top-sm {
    margin-top: 10px;
}

.margin-bottom-sm {
    margin-bottom: 10px;
}

.margin-bottom {
    margin-bottom: 15px;
}

.margin-t-no {
    margin-top: 0;    
}

.margin-b-no {
    margin-bottom: 0;
}

.clear {
    clear: both;
}

.sep-top {
    border-top: 1px solid #DDD;
}

.toast-success {
  background-color: #fd7e23;
}

footer {
    text-align: center;
}

@media (max-width: 991px) {
    .hidden-mobile {
        display:none !important;
    }
    .visible-mobile {
        display:inline !important;
    }
    .navbar-nav>li>a {
        line-height: 40px;
    }
    #navbar-logo-large {
        display: none;
    }
    #navbar-logo-small {
        display: block;
    }
    .image-box {
        height: 80px;
    }
}

@media (max-width: 767px) {
     .visible-xs {
        display:inline !important;
    }
    .navbar-nav>li>a {
        line-height: 20px;
    }
    .navbar-form {
        margin-top:0px;
    }
    .navbar-profile-container {
        clear: left;
    }
    #navbar-logo-large {
        display: block;
        height: 30px;
        margin-top: -5px;
    }
    #navbar-logo-small {
        display: none;
    }
    main {
        margin-top: -20px;
    }
    .image-box {
        height: 100px;
    }
    .hidden-xs {
        display: none !important;
    }
    .following-people .info-photo {
        height: 220px;
    }
    .search-mobile {
        display: inline;
        width: 320px;
    }
    .search-mobile input[type=search] {
        width: 280px;
    }
    .btn-primary:hover {
        background: #fd7e23;
    }
    .btn-option:hover {
        background: #CCC;
        color: #333;
    }
    .btn-file {
        position: relative;
        overflow: hidden;
    }
    .btn-file input[type=file] {
        
        position: absolute;
        top: 0;
        right: 0;
        min-width: 100%;
        min-height: 100%;
        font-size: 100px;
        text-align: right;
        filter: alpha(opacity=0);
        opacity: 0;
        outline: none;
        background: white;
        cursor: inherit;
        display: block;
    }
}

@media (max-width: 500px) {
    .search-mobile {
        width: 220px;
    }
    .search-mobile input[type=search] {
        width: 180px;
    }
}

@media (max-width: 390px) {
    .search-mobile {
        width: 140px;
    }
    .search-mobile input[type=search] {
        width: 100px;
    }
}

@media (min-width: 992px) {
    .image-box {
        height: 75px;
    }
    .following-people .info-photo {
        height: 220px;
    }
    .mod-controls {
        right: 25px;
        top: 10px;
    }
    .navbar-logout-button {
        margin-left: 60px;
    }
}

@media (min-width: 1200px) {
    .image-box {
        height: 95px;
    }
    .navbar-profile-container {
        margin-right: 120px;
    }
}

